fixed scrolling issues and words spilling out of div, removed sidebar

--- a/app/assets/stylesheets/public.scss
+++ b/app/assets/stylesheets/public.scss
@@ -1,3 +1,11 @@
+html {
+  overflow:   scroll;
+}
+::-webkit-scrollbar {
+    width: 0px;
+    background: transparent; /* make scrollbar transparent */
+}
+
 #public-chat-header {
   font-weight: bold;
   text-align: center;
@@ -5,7 +13,6 @@
 
 #public-chat-layout {
   display: flex;
-  height: 600px;
   margin-top: 2%;
 }
 
@@ -27,11 +34,10 @@
   background-color: white;
   border-top-right-radius: 20px;
   border-bottom-right-radius: 20px;
-  height: 100%;
-  margin-right: 150px;
-  overflow-x:hidden;
-  width: 100%;
+  margin-left: 15%;
+  margin-right: 15%;
   position: relative;
+  width: 100%;
 }
 
 #public-message {
@@ -39,11 +45,8 @@
 }
 
 #public-chat-messages {
-  
-}
-
-.flexy { // user image, name, and date
-  display:flex;
+  height: 500px;
+  overflow-y: scroll;
 }
 
 .rowy {
@@ -69,10 +72,15 @@
   background-color: white;
   max-width: inherit;
   padding: 20px;
-  width: 100%;
 }
 
 #message-content {
-  word-wrap: normal;
-  overflow: hidden;
+}
+
+p {
+  word-break: break-all;
+}
+
+#messages {
+  height: 500px;
 }
